--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,9 @@
         "removeComments": false,
         "sourceMap": true,
         "inlineSources": true,
-        "out": "outputfile/JsValidator.js",
+        "out": "outputfile/JsValidator-1.0.0.js",
         "target": "es5",
-        "preserveConstEnums": true
+        "preserveConstEnums": true,
+        "declaration": true
     }
 }
